[gd_scene load_steps=6 format=2]

[ext_resource path="res://LevelMenu.gd" type="Script" id=1]
[ext_resource path="res://NotoSans-Thin.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 28
outline_size = 1
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=2]

script/source = "extends Button



func _on_Button_pressed():
	get_tree().change_scene(\"res://Menu.tscn\")
"

[sub_resource type="DynamicFont" id=3]

size = 51
outline_size = 1
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = true
font_data = ExtResource( 2 )

[node name="LevelMenu" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.9
anchor_right = 0.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BACK"
flat = false
align = 1
script = SubResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = 21.0
margin_bottom = -70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 516.0
margin_bottom = 516.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 5

[node name="Button1" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "1"
flat = false
align = 1

[node name="Button2" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "2"
flat = false
align = 1

[node name="Button3" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "3"
flat = false
align = 1

[node name="Button4" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_right = 412.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "4"
flat = false
align = 1

[node name="Button5" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 416.0
margin_right = 516.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "5"
flat = false
align = 1

[node name="Button6" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "6"
flat = false
align = 1

[node name="Button7" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 204.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "7"
flat = false
align = 1

[node name="Button8" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_top = 104.0
margin_right = 308.0
margin_bottom = 204.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "8"
flat = false
align = 1

[node name="Button9" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_top = 104.0
margin_right = 412.0
margin_bottom = 204.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "9"
flat = false
align = 1

[node name="Button10" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 416.0
margin_top = 104.0
margin_right = 516.0
margin_bottom = 204.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "10"
flat = false
align = 1

[node name="Button11" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 100.0
margin_bottom = 308.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "11"
flat = false
align = 1

[node name="Button12" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 208.0
margin_right = 204.0
margin_bottom = 308.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "12"
flat = false
align = 1

[node name="Button13" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_top = 208.0
margin_right = 308.0
margin_bottom = 308.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "13"
flat = false
align = 1

[node name="Button14" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_top = 208.0
margin_right = 412.0
margin_bottom = 308.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "14"
flat = false
align = 1

[node name="Button15" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 416.0
margin_top = 208.0
margin_right = 516.0
margin_bottom = 308.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "15"
flat = false
align = 1

[node name="Button16" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 100.0
margin_bottom = 412.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "16"
flat = false
align = 1

[node name="Button17" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 312.0
margin_right = 204.0
margin_bottom = 412.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "17"
flat = false
align = 1

[node name="Button18" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_top = 312.0
margin_right = 308.0
margin_bottom = 412.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "18"
flat = false
align = 1

[node name="Button19" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_top = 312.0
margin_right = 412.0
margin_bottom = 412.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "19"
flat = false
align = 1

[node name="Button20" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 416.0
margin_top = 312.0
margin_right = 516.0
margin_bottom = 412.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "20"
flat = false
align = 1

[node name="Button21" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 416.0
margin_right = 100.0
margin_bottom = 516.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "21"
flat = false
align = 1

[node name="Button22" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 416.0
margin_right = 204.0
margin_bottom = 516.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "22"
flat = false
align = 1

[node name="Button23" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_top = 416.0
margin_right = 308.0
margin_bottom = 516.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "23"
flat = false
align = 1

[node name="Button24" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_top = 416.0
margin_right = 412.0
margin_bottom = 516.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "24"
flat = false
align = 1

[node name="Button25" type="Button" parent="ScrollContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 416.0
margin_top = 416.0
margin_right = 516.0
margin_bottom = 516.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "25"
flat = false
align = 1

[connection signal="pressed" from="Panel/Button" to="Panel/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button10" to="." method="_on_Button10_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button11" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button12" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button13" to="." method="_on_Button13_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button14" to="." method="_on_Button14_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button15" to="." method="_on_Button15_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button16" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button17" to="." method="_on_Button17_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button18" to="." method="_on_Button18_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button19" to="." method="_on_Button19_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button20" to="." method="_on_Button20_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button21" to="." method="_on_Button21_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button22" to="." method="_on_Button22_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button23" to="." method="_on_Button23_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button24" to="." method="_on_Button24_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/Button25" to="." method="_on_Button25_pressed"]
